# python-6502-emulator

./: .editorconfig  .flake8  .gitattributes  .gitignore  .markdown-lint.yml  .markdownlint.yml  .yamllint.yml  LICENSE  README.md  SECURITY.md  pylock.toml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  settings.yml  stale.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  linter.yml  python-ci.yml  wiki.yml
m6502/: __init__.py  memory.py  processor.py
source/: conf.py  index.rst
src/m6502/: __init__.py  memory.py  processor.py
tests/: __init__.py  test_cpu.py  test_cpu_ins_adc.py  test_cpu_ins_and.py  test_cpu_ins_asl.py  test_cpu_ins_bcc.py  test_cpu_ins_bcs.py  test_cpu_ins_beq.py  test_cpu_ins_bit.py  test_cpu_ins_bmi.py  test_cpu_ins_bne.py  test_cpu_ins_bpl.py  test_cpu_ins_brk.py  test_cpu_ins_bvc.py  test_cpu_ins_bvs.py  test_cpu_ins_clc.py  test_cpu_ins_cld.py  test_cpu_ins_cli.py  test_cpu_ins_clv.py  test_cpu_ins_cmp.py  test_cpu_ins_cpx.py  test_cpu_ins_cpy.py  test_cpu_ins_dec.py  test_cpu_ins_dex.py  test_cpu_ins_dey.py  test_cpu_ins_inc.py  test_cpu_ins_inx.py  test_cpu_ins_iny.py  test_cpu_ins_lda.py  test_cpu_ins_ldx.py  test_cpu_ins_ldy.py  test_cpu_ins_nop.py  test_cpu_ins_pha.py  test_cpu_ins_php.py  test_cpu_ins_pla.py  test_cpu_ins_plp.py  test_cpu_ins_sec.py  test_cpu_ins_sed.py  test_cpu_ins_sei.py  test_cpu_ins_sta.py  (+9 more)
wiki/: 6502-Basic-Architecture.md  Addressing-Modes.md  Coding-Algorithms.md  Home.md  Instruction-Reference.md  The-Instruction-Set.md  The-Registers.md  _Footer.md  _Sidebar.md
