[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "python-6502-emulator"
description = "python-6502-emulator"
keywords = ["python-6502-emulator"]

version = "0.1.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

readme = "README.md"
authors = [
    {name="Hans Spaans", email="hspaans@gmail.com"},
]
maintainers = [
    {name="Hans Spaans", email="hspaans@gmail.com"},
]

requires-python = ">= 3.11,<3.14"

dependencies = [
]

[dependency-groups]
dev = [
    "tox>=4.30.0,<5.0.0",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov",
    "pytest-fixtures",
    "pytest-github-actions-annotate-failures",
    "pytest-randomly",
    "pytest-sphinx",
]
lint = [
    "flake8>=7,<8",
    "flake8-black",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-deprecated",
    "flake8-docstrings",
    "flake8-typing-imports",
    "flake8-print",
    "flake8-pylint",
    "flake8-pytest-style",
    "flake8-rst-docstrings",
    "flake8-isort",
    "pymarkdownlnt",
    "yamllint",
]
docs = [
    "Sphinx~=8.2",
    "sphinx-autobuild",
    "sphinx-toolbox",
    "furo",
]

[project.urls]
homepage = "https://github/hspaans/python-6502-emulator"
documentation = "https://github/hspaans/python-6502-emulator"
repository = "https://github/hspaans/python-6502-emulator"
issues = "https://github/hspaans/python-6502-emulator/issues"
changelog = "https://github/hspaans/python-6502-emulator/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tools.check-manifest]
ignore = [
  ".devcontainer/*",
  ".github/*"
]

[tool.pylint.design]
max-attributes = 16

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
]

[tool.pymarkdown]
plugins.md013.enabled = false

[tool.hatch.build.targets.wheel]
packages = ["src/m6502"]

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601", "S101"]

[tool.tox]
requires = ["tox>=4.27.0,<5.0"]
env_list = ["lint", "fix", "3.13", "3.12", "3.11", "cov", "type", "pkg_meta"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
description = "run the tests with pytest under {env_name}"
package = "wheel"
wheel_build_env = ".pkg"
dependency_groups = ["test"]
pass_env = ["PYTEST_*", "SSL_CERT_FILE"]
set_env.COVERAGE_FILE = { replace = "env", name = "COVERAGE_FILE", default = "{work_dir}{/}.coverage.{env_name}" }
set_env.COVERAGE_FILECOVERAGE_PROCESS_START = "{tox_root}{/}pyproject.toml"
commands = [
    ["pytest", "--cov=m6502", "--cov-report=term-missing", "tests"],
    ["python", "-c", 'print(r"{env_python}")'],
]

[tool.tox.env.dev]
description = "dev environment with all deps at {envdir}"
package = "editable"
dependency_groups = ["dev"]
commands = [
    ["python", "-m", "pip", "list", "--format=columns"],
    ["python", "-c", 'print(r"{env_python}")'],
]

[tool.tox.env.docs]
description = "generating documentation at {envdir}"
package = "wheel"
dependency_groups = ["docs"]
commands = [
    ["sphinx-build", "-b", "html", "docs", "build/html"],
    ["python", "-c", 'print(r"{env_python}")'],
]

[tool.tox.env.lint]
description = "running lint at {envdir}"
package = "editable"
dependency_groups = ["lint", "test"]
commands = [
    ["python", "-m", "yamllint", ".", "--format", "github"],
    ["python", "-m", "flake8", "--doctests", "src/", "tests/"],
    ["python", "-m", "pymarkdownlnt", "scan", "."],
    ["python", "-m", "rstcheck", "-r", "docs/"],
    ["python", "-c", 'print(r"{env_python}")'],
]
